3-k8s/3-api-rest-java.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-rest-java-jib-svc
spec:
  type: NodePort   #can be modified to ClusterIP (internal)
  selector:
    app: api-rest-java-jib-pod
  ports:
    - name: app-port-mapping
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30090

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-rest-java-jib-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-rest-java-jib-pod
  template:
    metadata:
      labels:
        app: api-rest-java-jib-pod
    spec:
      containers:
        - name: api-rest-java
          image: user/repo:tag # image from dockerHub
          ports:
            - containerPort: 8080
