3-k8s/4-api-ui-nestjs.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-ui-svc
spec:
  type: NodePort  #can be modified to ClusterIP (internal)
  selector:
    app: api-ui-pod
  ports:
    - name: app-port-mapping
      protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-ui-pod
  template:
    metadata:
      labels:
        app: api-ui-pod
    spec:
      containers:
        - name: api-ui
          image: user/repo:tag # image from dockerHub
          ports:
            - containerPort: 3000
